Version 0.2.4~dev

	* Fix scripts being distributed/installed without execution rights.
	* Add a verbose option, closes: #1970.
	* Add sample configuration file.
	* Delay respawn_command execution in SIGCHLD handler, closes: #1971.
	* Fix typo in sample configuration.
	* Add logging per process support, closes: #1917.
	* Add padding and deinterlace options.
	* Update and split man pages.

Version 0.2.3 Released on 2009/05/06

	* Fix incorrect test in post-command executions, closes: #1900.
	* Fix incorrect test for quick death of childs, closes: #1850.

Version 0.2.2 Released on 2009/05/04

	* Make path of ffmpeg's binary configurable, refs: #1847.
	* Do not loop forever waiting children's death, closes: #1850.
	* Add support for audio volume parameter.
	* Catch pre/post command failures, closes: #1849.
	* Forbid scheduling of the same command twice, closes: #1852.
	* Allow printing log on stdout in no-daemon mode.
	* Add scripts as a workaround to current situation with tvrbox
	  streaming.
	* Do not send mail if commands did not lived long enough.
	* Add basic mail sending script.

Version 0.2.1 Released on 2009/04/09

	* Load pre/post commands in sequence, starting at 1, refs: #1810.

Version 0.2.0 Released on 2009/03/20

	* Handle pre/post command, closes: #1641.
	* Do not die if pid file exists but refers to an non-existing process.

Version 0.1.0 Released on 2009/03/20

	* Initial work, closes: #1514.