@@ -8,6 +8,8 @@ Version 0.2.4~dev
 	* Add logging per process support, closes: #1917.
 	* Add padding and deinterlace options.
 	* Update and split man pages.
+	* Do not abort trying to start a push when a pre-command fails,
+	  closes: #2006.
 
 Version 0.2.3 Released on 2009/05/06
 
